# timeslicer

./: .gitignore  CMakeLists.txt  README.md  ideas.md  update_cmakelists.py
example/: main.cpp
include/: timeslicer_public.h
include/timeslicer/: macros.h  performance_timer.h  timeslice_pattern.h  timeslicer.h
src/timeslicer/: performance_timer.cpp  timeslice_pattern.cpp  timeslicer.cpp  timeticker.cpp
